# morris-exercises

./: morris-exercises.cabal
haskell/morris-exercises/: .gitignore.swp  LICENSE
haskell/morris-exercises/src/: Inter.hs
src/: Inter.hs
