name:                morris-exercises
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/halarnold2000/morris-exercises#readme
license:             BSD3
license-file:        LICENSE
author:               Hal Arnold
maintainer:          halarnold2000@yahoo.com
copyright:           2010 Author Here
category:             training
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Inter
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable morris-exercises-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , morris-exercises
  default-language:    Haskell2010

test-suite morris-exercises-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , morris-exercises
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/halarnold2000/morris-exercises
